src/test/ui/feature-gates/feature-gate-repr-simd.stderr
error[E0658]: SIMD types are experimental and possibly buggy
  --> $DIR/feature-gate-repr-simd.rs:1:1
   |
LL | #[repr(simd)]
   | ^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/27731
   = help: add #![feature(repr_simd)] to the crate attributes to enable

error[E0658]: SIMD types are experimental and possibly buggy
  --> $DIR/feature-gate-repr-simd.rs:5:1
   |
LL | #[repr(simd)]
   | ^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/27731
   = help: add #![feature(repr_simd)] to the crate attributes to enable

warning[E0566]: conflicting representation hints
  --> $DIR/feature-gate-repr-simd.rs:4:8
   |
LL | #[repr(C)]
   |        ^
LL | #[repr(simd)]
   |        ^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
